methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:27: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
    var c:Color;
        ^PatternPicture:27: error: local variables must be initialized
    var c:Color;
        ^